Copyright (c) 2002-2008 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Silva 2.1.1

    Features added:

      - Made the public page link in the tab space visible, styled as
        a tab.

      - User can to localized and only be defined for a sub-container.

      - Middleground macro have been re-factored to a view, with
        actions on it as viewlets. Extensions can plug sub-screen on
        any tab now, without overriding any tab screen.

    Bug fixes

      - fixed 274668: multiple query parameters on relative links
        broke, because the ampersands were not properly escaped.

      - fixed 263503: adding support for relative links with query
        parameters (e.g. /path/to/object?key=value)

      - correct unauthorized error when a chief editor/manager want to
        use the access tab and he don't have any access in the Silva
        root and the service members implements the use direct lookup
        protocol.

      - fixed a bug in tab_edit.pt where a dynamic string was being
        i18n-ed.

      - fixed a bug on tab_access.pt where a tal: was missing.

      - Fix for kupu in html transform from
        lis.append(silva.li(el.convert(context))) to
        lis.append(silva.li(silva.br(), el.convert(context)))

      - Fix for list items nesting problem.

    Ported from 2.0 branch:

      - added partial catalog rebuilding for better testing
        possibilities on large sites.

      - added logging to catalog rebuilds, because they can
        potentially take a very long time.


  Silva 2.1

    Features added:

      - Updated documentation, screen shots and content.

      - A quota subsystem has been added. It lets Managers set a quota
        on a publication (which can also be a virtual host
        root). Containers within the publication acquire the
        quota. The quota does not tally the space used by the xml of
        documents but counts only assets. The used space is tracked on